# chorus

./: .clippy-baseline.json  .eslint-baseline.json  .gitattributes  .gitignore  .gitleaks-baseline.json  .gitleaks.toml  .mcp.json  CLAUDE.md  PAIR-3237-plan.md  PAIR-3237-seam-proof.sh  SESSION-CHECKPOINT.md  TEAM_PROTOCOL.md  TEST.md  activity.md  api  board-client  bridge  cclsp.json  ceremony-roi.md  chorus-sdk  claudemd  communication-protocol.md  config  cost-log.md  coverage-floors.yml  decisions  domain-context  eslint.config.js  jeff-preferences.json  jeff-tickets.md  logs  messaging  next-session-silas.md  package-lock.json  package.json  role-config-manifest.md  schemas  scripts  t.sh  team-architecture.md  (+2 more)
platform/services/chorus-hooks/: BUILD.md  Cargo.toml  Makefile  com.chorus.hooks.plist  librust_out.rlib  llvm-cov-summary.json  settings-patch.json  tarpaulin.toml
platform/services/chorus-hooks/.cargo/: config.toml
platform/services/chorus-hooks/examples/: silas_morning.rs
platform/services/chorus-hooks/src/: chorus_log.rs  hook_obs.rs  inject.rs  lib.rs  main.rs  mcp_client.rs  nudge.rs  ops.rs  process.rs  role_state.rs  session_cache.rs  shim.rs  state.rs  types.rs
platform/services/chorus-hooks/src/commands/: athena_tree_inject.rs  context_cache.rs  health.rs  mod.rs  principles_inject.rs  pulse.rs  session.rs  session_registry.rs
platform/services/chorus-hooks/src/hooks/: accept_gate.rs  app_state_guard.rs  autonomy_guard.rs  batch_progress.rs  bedroom_nfs_guard.rs  canonical_write_guard.rs  card_add_probe.rs  card_approval_responder.rs  card_directive_detector.rs  chrome_tab_gate.rs  clock_sync.rs  context_inject.rs  csc_guard.rs  demo_gate.rs  demo_show.rs  (+36 more)
platform/services/chorus-hooks/tests/: 3672_gate_never_traps.rs  accept_gate_card_comment.rs  briefs_scanner.rs  canonical_write_guard.rs  chat_suite.rs  chorus_root_env.rs  context_cache_slim.rs  context_inject_card_tag_3134.rs  demo_gate_env.rs  demo_gate_proven.rs  demo_gate_removal.rs  demo_preflight_env.rs  deploy_role_settings.rs  escaping_and_git.rs  file_classification_tmp_exempt.rs  git_command_env_scrub.rs  hook_false_positives.rs  hook_path_env.rs  infra_guardrails_1866_test.rs  inject_binary_test.rs  inject_force_3203.rs  inject_uses_binary.rs  integration.rs  is_fix_card_override.rs  log_append_atomic_3278.rs  manifest_envelope.rs  mcp_client_session.rs  memory_gate_env_scrub_test.rs  no_docker_in_infra_guardrails.rs  no_silent_timeouts.rs  nudge_force.rs  nudge_force_source_gate.rs  nudge_no_double_deliver.rs  nudge_origin_tag.rs  nudge_single_drain.rs  nudge_suite.rs  ops_awareness_timeout.rs  pair_gate_disabled.rs  perf_suite.rs  post_build_accessibility.rs  (+33 more)
platform/services/chorus-inject/: BUILD.md  Cargo.toml  llvm-cov-summary.json  tarpaulin.toml
platform/services/chorus-inject/src/: lib.rs  main.rs
platform/services/chorus-inject/tests/: always_wake_test.rs  inject_integration.rs  inject_source_gate.rs  inject_test.rs  non_bmp_escape_test.rs  runner_dispatch.rs  tty_inject_test.rs  vscode_inject_test.rs
platform/services/chorus-model/: Cargo.toml
platform/services/chorus-model/src/: lib.rs  main.rs
platform/services/chorus-model/tests/: constraint_enforcement.rs  identity_gate.rs
platform/services/loom-gemba/: Cargo.toml
platform/services/loom-gemba/src/: lib.rs  main.rs
platform/services/loom-gemba/tests/: units.rs
platform/services/owl-api/: Cargo.toml  gen1.json  govern-3612-drill.mjs  owl-api-launch.sh  owl-api-regen.sh
platform/services/owl-api/examples/: effective_response.rs
platform/services/owl-api/src/: auth.rs  cascade.rs  lib.rs  main.rs  oidc.rs
platform/services/owl-api/tests/: cascade.rs  cors.rs  effective.rs  generated_surfaces.rs  ilities.rs  instances_graph_spine.rs  live_envelope.rs  live_serve.rs  observability.rs  tree_read.rs
platform/services/pair-heartbeat/: Cargo.toml
platform/services/pair-heartbeat/src/: lib.rs  main.rs
platform/services/pair-heartbeat/tests/: units.rs
platform/services/properties-resolver/: Cargo.toml
platform/services/properties-resolver/src/: lib.rs  main.rs
platform/services/properties-resolver/tests/: cascade.rs  selfcheck.rs
platform/services/pulse-gather/: Cargo.toml
platform/services/pulse-gather/src/: lib.rs  main.rs
platform/services/pulse-gather/tests/: units.rs
platform/services/werk-accept/: Cargo.toml
platform/services/werk-accept/src/: lib.rs  main.rs
platform/services/werk-accept/tests/: e2e.rs  units.rs
platform/services/werk-acp/: Cargo.toml
platform/services/werk-acp/src/: lib.rs  main.rs
platform/services/werk-acp/tests/: e2e.rs  units.rs
platform/services/werk-commit/: Cargo.toml
platform/services/werk-commit/src/: lib.rs  main.rs
platform/services/werk-commit/tests/: e2e.rs  units.rs
platform/services/werk-demo/: Cargo.toml
platform/services/werk-demo/src/: lib.rs  main.rs
platform/services/werk-demo/tests/: 3519-verdict.rs  e2e.rs  feedback_registration.rs  memory_floor.rs  ops_health.rs
platform/services/werk-merge/: Cargo.toml
platform/services/werk-merge/src/: lib.rs  main.rs
platform/services/werk-merge/tests/: e2e.rs  units.rs
platform/services/werk-push/: Cargo.toml
platform/services/werk-push/src/: lib.rs  main.rs
platform/services/werk-push/tests/: e2e.rs  units.rs
platform/services/werk-review/: Cargo.toml
platform/services/werk-review/src/: lib.rs  main.rs
platform/services/werk-review/tests/: e2e.rs  units.rs
platform/services/werk-sync/: Cargo.toml
platform/services/werk-sync/src/: lib.rs  main.rs
platform/services/werk-sync/tests/: e2e.rs  units.rs
platform/services/werk-teardown/: Cargo.toml
platform/services/werk-teardown/src/: lib.rs
platform/services/werk-teardown/tests/: teardown.rs  zero-external-deps.rs
platform/services/werk-test/: Cargo.toml
platform/services/werk-test/src/: lib.rs  main.rs
platform/services/werk-test/tests/: units.rs
platform/services/werk-unpull/: Cargo.toml
platform/services/werk-unpull/src/: lib.rs  main.rs
platform/services/werk-unpull/tests/: e2e.rs  units.rs
(+6473 files in other folders)
