[package]
name = "chorus-hooks"
version = "0.1.0"
edition = "2021"
description = "Long-running hook service for Claude Code — replaces 12 bash/python hooks with zero-fork overhead"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = [] }
hyper = { version = "1" }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = { version = "0.5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "2", features = ["json"] }
libc = "0.2"
sha2 = "0.10"

[[bin]]
name = "chorus-hooks"
path = "src/main.rs"

[[bin]]
name = "chorus-hook-shim"
path = "src/shim.rs"

[[bin]]
name = "chorus-inject"
path = "src/inject.rs"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
