[package]
name = "chorus-hooks"
version = "0.1.0"
edition = "2021"
description = "Long-running hook service for Claude Code — replaces 12 bash/python hooks with zero-fork overhead"

# #2284: explicit lint config — parity with gathering ESLint ruleset.
# Warnings tracked in platform/state/gate-warning-baseline; gate-code fails on increase.
[lints.rust]
# `coverage` is set by the tarpaulin/llvm-cov runs, not a cargo feature — declare
# it so check-cfg doesn't flag the nudge_poll cfg gate as a typo.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)"] }
dead_code = "warn"
unused_imports = "warn"
unused_variables = "warn"
unused_mut = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
# #2602: structural-erosion sensor — cognitive_complexity is in clippy::nursery,
# not enabled by `all`. Warn-level so existing pre-commit `cargo clippy` surfaces
# the 13 known hits (top scores 65/57/47 on orchestrator `check`/`run` functions).
# NOT a deny — concurrent-safe with #2588 dead-code refactor. Trend-class signal
# for #2527 drift lane (delta-on-rise, weekly), not a pre-commit gate.
cognitive_complexity = "warn"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = [] }
hyper = { version = "1" }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = { version = "0.5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "3", features = ["json"] }
libc = "0.2"
sha2 = "0.10"
# #2765 — UUIDv7 for nudge trace_id (sortable, time-ordered correlation key)
uuid = { version = "1", features = ["v7"] }

[[bin]]
name = "chorus-hooks"
path = "src/main.rs"

[[bin]]
name = "chorus-hook-shim"
path = "src/shim.rs"

## chorus-inject moved to its own crate (../chorus-inject/) so it has
## an independent build lifecycle and TCC permissions survive hooks rebuilds.

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
