[package]
name = "chorus-model"
version = "0.1.0"
edition = "2021"

# The governed RDF/OWL writer (#3257, model-2) — the ONLY sanctioned write path
# to the model store. Zero dependencies (ADR-032 §1): std only; Fuseki via
# `curl` subprocess; chorus-log via subprocess. Implements ADR-040 Rule 0:
# callers pass (kind, name, fields) — the DAL mints the IRI; a non-conformant
# IRI is unwritable by construction.
[dependencies]

[[bin]]
name = "chorus-model"
path = "src/main.rs"

[lib]
name = "chorus_model"
path = "src/lib.rs"
