[package]
name = "owl-api"
version = "0.1.0"
edition = "2021"

# owl-api (#3350, model-5 spike) — generates the Domain API FROM the OWL.
# `generate` reads chorus:Domain + DomainShape from urn:chorus:ontology and
# emits routes.json (deterministic: same OWL in, same routes out).
# `serve` loads routes.json and serves it over HTTP — its own process, OFF the
# chorus-api Node event loop (the ADR-034 lesson), read-only (writes go
# through chorus-model, the DAL — never through this API).
# Near-zero dependencies (ADR-032 §1): std TcpListener HTTP; Fuseki via curl.
# #3402 EXCEPTION (ADR-042 security supersedes ADR-032 §1 for ONE purpose): the
# seam auth verifies an HS256 service-token JWT locally, which needs the HMAC-SHA256
# primitive. Hand-rolling crypto is a security anti-pattern, so we take the two
# vetted RustCrypto crates for the primitive ONLY — base64url + claim parsing stay
# zero-dep in src/auth.rs (owl-api's parsing ethos). No other deps; no async runtime.
[dependencies]
hmac = "0.12"
sha2 = "0.10"
# #3613 / ADR-052 — the seam verifies CSS's ES256 (ECDSA P-256) tokens with the
# JWKS public key. Same #3402 exception, asymmetric half: the crypto PRIMITIVE
# is the vetted RustCrypto crate; JWT/JWKS parsing stays hand-built in src/oidc.rs.
p256 = { version = "0.13", features = ["ecdsa"] }
# #3435 — the pure cascade resolver (#3437): decide_effective_value over a scope chain.
# Path dep on the sibling crate; owl-api stays the I/O half (SPARQL fetch + coerce + serve).
properties-resolver = { path = "../properties-resolver" }

[[bin]]
name = "owl-api"
path = "src/main.rs"

[lib]
name = "owl_api"
path = "src/lib.rs"
