[package]
name = "werk-accept"
version = "0.1.0"
edition = "2021"

# Self-contained: ZERO external/registry dependencies. std only + a direct libc
# `flock` extern, and the `git`/`gh`/`cards`/`chorus-log` CLIs as subprocesses.
# Blueprint: werk-pull (#3045). The atomic EXIT-FINALIZE verb (#3057). The
# sibling path-dep werk-teardown (#3431) is itself zero-external-dep — worktree
# teardown is the verb's own domain now, no more `chorus-werk remove` shell-out.
[dependencies]
werk-teardown = { path = "../werk-teardown" }

[[bin]]
name = "werk-accept"
path = "src/main.rs"
