[package]
name = "werk-acp"
version = "0.1.0"
edition = "2021"

# Self-contained: ZERO dependencies. std only + a direct libc `flock` extern
# (libc is linked by default). Composes the other verb BINARIES (werk-commit /
# werk-push / werk-deploy / werk-accept) as subprocesses resolved on PATH — no
# verb imports another (ADR-032 §1); they compose at the process boundary.
[dependencies]

[[bin]]
name = "werk-acp"
path = "src/main.rs"
