[package]
name = "werk-push"
version = "0.1.0"
edition = "2021"

# Self-contained: ZERO dependencies. std only + a direct libc `flock` extern,
# and the `git`/`gh` CLIs as subprocesses. The v2 verb-binary blueprint is
# werk-pull (#3045); this is the atomic PUSH verb, split out of commit+push (#3056).
[dependencies]

[[bin]]
name = "werk-push"
path = "src/main.rs"
